--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <title>Open WP Club - Transform into a Professional WordPress Developer</title>
   <meta name="description"
     content="Open WP Club actively teaches, advocates, and promotes excellence in software engineering. Transform from WordPress developer to professional software engineer through our interactive training and certification.">
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta name="keywords" content="WordPress, Open Source, Software Engineering, Community, Plugins, Development">
+  <meta name="author" content="Open WP Club">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="./assets/css/styles_min.css">
   <script>
     tailwind.config = {
       theme: {
