--- a/index.html
+++ b/index.html
@@ -140,6 +140,83 @@
     </div>
   </section>
 
+<!-- Our Plugins Section -->
+<!-- Our Plugins Section -->
+<section id="plugins" class="py-20 bg-gray-50">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="text-center">
+      <h2 class="text-3xl sm:text-4xl font-bold text-gray-900 tracking-tight">Our WordPress Plugins</h2>
+      <p class="mt-4 text-xl text-gray-600 max-w-2xl mx-auto">
+        Open source WordPress plugins created by our community members. Free to use and contribute to.
+      </p>
+    </div>
+
+    <!-- Loading State -->
+    <div id="plugins-loading" class="mt-16 text-center">
+      <div class="inline-flex items-center">
+        <svg class="animate-spin -ml-1 mr-3 h-5 w-5 text-blue-600" xmlns="http://www.w3.org/2000/svg" fill="none"
+          viewBox="0 0 24 24">
+          <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+          <path class="opacity-75" fill="currentColor"
+            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+          </path>
+        </svg>
+        Loading our latest plugins...
+      </div>
+    </div>
+
+    <!-- Error State -->
+    <div id="plugins-error" class="mt-16 text-center hidden">
+      <p class="text-gray-600">Unable to load plugins at the moment. Please visit our <a
+          href="https://github.com/Open-WP-Club" class="text-blue-600 hover:text-blue-700">GitHub</a> to see all our
+        projects.</p>
+    </div>
+
+    <!-- Plugins Grid - First 6 -->
+    <div id="plugins-grid" class="mt-16 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 hidden">
+      <!-- First 6 plugins will be inserted here -->
+    </div>
+
+    <!-- Plugin Slider - Remaining plugins -->
+    <div id="plugins-slider-container" class="mt-12 hidden">
+      <div class="flex items-center justify-between mb-6">
+        <h3 class="text-2xl font-bold text-gray-900">More Plugins</h3>
+        <div class="flex gap-2">
+          <button id="slider-prev"
+            class="p-2 rounded-lg bg-white border border-gray-300 hover:bg-gray-50 transition-colors duration-200">
+            <svg class="size-5 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
+            </svg>
+          </button>
+          <button id="slider-next"
+            class="p-2 rounded-lg bg-white border border-gray-300 hover:bg-gray-50 transition-colors duration-200">
+            <svg class="size-5 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="relative overflow-hidden">
+        <div id="plugins-slider" class="flex transition-transform duration-300 ease-in-out">
+          <!-- Remaining plugins will be inserted here -->
+        </div>
+      </div>
+    </div>
+
+    <div class="mt-12 text-center">
+      <a href="https://github.com/Open-WP-Club" target="_blank" rel="noopener noreferrer"
+        class="inline-flex items-center px-6 py-3 border border-blue-600 text-base font-medium rounded-lg text-blue-600 bg-white hover:bg-blue-50 transition-colors duration-200 shadow-lg hover:shadow-xl transform hover:-translate-y-0.5 transition-all">
+        <svg class="size-5 mr-3" fill="currentColor" viewBox="0 0 20 20">
+          <path fill-rule="evenodd"
+            d="M10 0C4.477 0 0 4.484 0 10.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0110 4.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.203 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.942.359.31.678.921.678 1.856 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0020 10.017C20 4.484 15.522 0 10 0z"
+            clip-rule="evenodd"></path>
+        </svg>
+        View All Projects on GitHub
+      </a>
+    </div>
+  </div>
+</section>
+ 
   <!-- Mission Section -->
   <section id="mission" class="py-20 bg-gray-50">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -367,48 +444,7 @@
   </footer>
 
   <!-- Smooth scrolling script -->
-  <script>
-    // Smooth scrolling for navigation links
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-      anchor.addEventListener('click', function (e) {
-        e.preventDefault();
-        const target = document.querySelector(this.getAttribute('href'));
-        if (target) {
-          target.scrollIntoView({
-            behavior: 'smooth',
-            block: 'start'
-          });
-        }
-      });
-    });
-
-    // Add active state to navigation links
-    window.addEventListener('scroll', () => {
-      const sections = document.querySelectorAll('section[id]');
-      const navLinks = document.querySelectorAll('nav a[href^="#"]');
-
-      let current = '';
-      sections.forEach(section => {
-        const sectionTop = section.offsetTop - 100;
-        if (scrollY >= sectionTop) {
-          current = section.getAttribute('id');
-        }
-      });
-
-      navLinks.forEach(link => {
-        link.classList.remove('text-blue-600');
-        if (link.getAttribute('href') === `#${current}`) {
-          link.classList.add('text-blue-600');
-        }
-      });
-    });
-
-    // Mobile menu toggle (if needed later)
-    function toggleMobileMenu() {
-      const mobileMenu = document.getElementById('mobile-menu');
-      mobileMenu.classList.toggle('hidden');
-    }
-  </script>
+<script src="./assets/js/main.js"></script>
+<script src="./assets/js/plugins.js"></script>
 </body>
-
 </html>
