--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     content="Open WP Club is a welcoming community where WordPress developers share knowledge, collaborate on open source projects, and help each other build better solutions.">
   <meta name="keywords" content="WordPress, Open Source, Community, Developers, Collaboration">
   <meta name="author" content="Open WP Club">
-  
-  
-    <link href="./assets/css/styles_min.css" rel="stylesheet">
+
+
+  <link href="./assets/css/styles_min.css" rel="stylesheet">
 </head>
 
 <body class="font-sans antialiased bg-gray-50 text-gray-900">
@@ -140,73 +140,64 @@
     </div>
   </section>
 
-<!-- Our Plugins Section -->
-<!-- Our Plugins Section -->
-<section id="plugins" class="py-20 bg-gray-50">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-    <div class="text-center">
-      <h2 class="text-3xl sm:text-4xl font-bold text-gray-900 tracking-tight">Our WordPress Plugins</h2>
-      <p class="mt-4 text-xl text-gray-600 max-w-2xl mx-auto">
-        Open source WordPress plugins created by our community members. Free to use and contribute to.
-      </p>
-    </div>
-
-    <!-- Loading State -->
-    <div id="plugins-loading" class="mt-16 text-center">
-      <div class="inline-flex items-center">
-        <svg class="animate-spin -ml-1 mr-3 h-5 w-5 text-blue-600" xmlns="http://www.w3.org/2000/svg" fill="none"
-          viewBox="0 0 24 24">
-          <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-          <path class="opacity-75" fill="currentColor"
-            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
-          </path>
-        </svg>
-        Loading our latest plugins...
+  <!-- Our Plugins Section -->
+  <section id="plugins" class="py-16 bg-gray-50">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="text-center">
+        <h2 class="text-2xl sm:text-3xl font-bold text-gray-900 tracking-tight">Our WordPress Plugins</h2>
+        <p class="mt-3 text-lg text-gray-600 max-w-2xl mx-auto">
+          Open source WordPress plugins created by our community members.
+        </p>
       </div>
-    </div>
 
-    <!-- Error State -->
-    <div id="plugins-error" class="mt-16 text-center hidden">
-      <p class="text-gray-600">Unable to load plugins at the moment. Please visit our <a
-          href="https://github.com/Open-WP-Club" class="text-blue-600 hover:text-blue-700">GitHub</a> to see all our
-        projects.</p>
-    </div>
-
-    <!-- Plugins Grid - First 6 -->
-    <div id="plugins-grid" class="mt-16 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 hidden">
-      <!-- First 6 plugins will be inserted here -->
-    </div>
-
-    <!-- Plugin Slider - Remaining plugins -->
-    <div id="plugins-slider-container" class="mt-12 hidden">
-      <div class="flex items-center justify-between mb-6">
-        <h3 class="text-2xl font-bold text-gray-900">More Plugins</h3>
-        <div class="flex gap-2">
-          <button id="slider-prev"
-            class="p-2 rounded-lg bg-white border border-gray-300 hover:bg-gray-50 transition-colors duration-200">
-            <svg class="size-5 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
-            </svg>
-          </button>
-          <button id="slider-next"
-            class="p-2 rounded-lg bg-white border border-gray-300 hover:bg-gray-50 transition-colors duration-200">
-            <svg class="size-5 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
-            </svg>
-          </button>
+      <!-- Loading State -->
+      <div id="plugins-loading" class="mt-12 text-center">
+        <div class="inline-flex items-center">
+          <svg class="animate-spin -ml-1 mr-3 h-5 w-5 text-blue-600" xmlns="http://www.w3.org/2000/svg" fill="none"
+            viewBox="0 0 24 24">
+            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+            <path class="opacity-75" fill="currentColor"
+              d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+            </path>
+          </svg>
+          Loading our latest plugins...
         </div>
       </div>
-      <div class="relative overflow-hidden">
-        <div id="plugins-slider" class="flex transition-transform duration-300 ease-in-out">
-          <!-- Remaining plugins will be inserted here -->
+
+      <!-- Error State -->
+      <div id="plugins-error" class="mt-12 text-center hidden">
+        <p class="text-gray-600">Unable to load plugins at the moment. Please visit our <a
+            href="https://github.com/Open-WP-Club" class="text-blue-600 hover:text-blue-700">GitHub</a> to see all our
+          projects.</p>
+      </div>
+
+      <!-- Plugins Slider -->
+      <div id="plugins-slider-container" class="mt-12 hidden">
+        <div class="flex items-center justify-between mb-6">
+          <div class="flex gap-2">
+            <button id="slider-prev"
+              class="p-2 rounded-lg bg-white border border-gray-300 hover:bg-gray-50 transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed">
+              <svg class="size-5 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
+              </svg>
+            </button>
+            <button id="slider-next"
+              class="p-2 rounded-lg bg-white border border-gray-300 hover:bg-gray-50 transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed">
+              <svg class="size-5 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+              </svg>
+            </button>
+          </div>
+        </div>
+        <div class="relative overflow-hidden">
+          <div id="plugins-slider" class="flex transition-transform duration-300 ease-in-out gap-4">
+            <!-- Plugins will be inserted here -->
+          </div>
         </div>
       </div>
     </div>
+  </section>
 
-
-  </div>
-</section>
- 
   <!-- Mission Section -->
   <section id="mission" class="py-20 bg-gray-50">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -434,7 +425,8 @@
   </footer>
 
   <!-- Smooth scrolling script -->
-<script src="./assets/js/main.js"></script>
-<script src="./assets/js/plugins.js"></script>
+  <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/plugins.js"></script>
 </body>
+
 </html>
